--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -107,35 +107,6 @@
     border-radius: 8px;
   }
   
-  .slick-slide {
-    pointer-events: none;
-  }
-  .slide-image-one {
-    background-image: url('https://ik.imagekit.io/sld/ICHACK_a2o31d1eR.png');
-    background-position: right;
-  }
-  
-  
-  .slide-image-two {
-    background-image: url('https://ik.imagekit.io/sld/HackKings_nVVodPVC9.jpeg');
-    background-position: center;
-  }
-  
-  .slide-image-three {
-    background-image: url('https://ik.imagekit.io/sld/AmexOnboarding_my-fjWmR6.jpeg');
-    background-position: right;
-  }
-  
-  .firework-window {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100vw;
-    z-index: 100;
-    height:  calc(100vh);
-    pointer-events: none;
-  }
-  
   .animated-expansion{
     max-height: 0;
     overflow: hidden;
